# databricks-scala-v-python

./: .gitignore  README.md  pyproject.toml
Modules/Python/: pyproject.toml
Modules/Python/src/databricks_libs/: tests.py  udf_registry.py  utils.py
Modules/Scala/: build.sbt
Modules/Scala/src/main/scala/tests/: JoinGroupAverageTest.scala  LeftPandasUdfTest.scala  LeftPythonArrowUdfTest.scala  LeftPythonPickledUdfTest.scala  LeftScalaUdf.scala  LeftScalaUdfTest.scala  LeftSparkTest.scala  TestCase.scala  TestsFactory.scala  UdfRegistry.scala
Modules/Scala/src/main/scala/udfs/: LeftScalaUdf.scala  UdfRegistry.scala
Modules/Scala/src/main/scala/utils/: JobMetricsListener.scala  MetricsLogger.scala
Notebooks/: JobMetricsSparkListener.scala  _ddls.py  _sample_udfs.py  ddls.py  python.py  scala.scala  warm_up_cluster.py
Notebooks/read_write/: python.py  scala.scala
scala/src/main/scala/utils/: MySparkListener.scala
