[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "databricks_libs"
version = "0.8.4"
authors = [
  { name="Szymon Karpecki"},
]
description = "Databricks libraries"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
