[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "databricks_libs"
version = "1.0.0"
authors = [
  { name="Szymon Karpecki"},
]
description = "Databricks libraries"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"


[tool.setuptools]
packages = ["databricks_libs"]
package-dir = {"" = "src"}
